// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NotificationEditFormComponent should snap with default view 1`] = `
<tm-notification-edit-form
  NOTIFICATION_TITLE_MAX_LENGTH={[Function Number]}
  NotificationEditFormMode={[Function Object]}
  NotificationStyle={[Function Object]}
  NotificationTargetUser={[Function Object]}
  __ngContext__={[Function Number]}
  addNewNotificationEvent={[Function EventEmitter_]}
  cancelEditingNotificationEvent={[Function EventEmitter_]}
  courseCandidates={[Function Array]}
  editExistingNotificationEvent={[Function EventEmitter_]}
  formMode="0"
  guessTimezone={[Function String]}
  model={[Function Object]}
  modelChange={[Function EventEmitter_]}
  simpleModalService={[Function SimpleModalService]}
>
  <div
    class="card card-plain"
  >
    <div
      class="close-header"
    >
      <button
        aria-label="Close"
        class="btn-close float-end"
        type="button"
      />
    </div>
    <div
      class="card-body"
    >
      <div
        class="card border-primary"
      >
        <div
          class="card-body"
        >
          <div
            class="row text-center"
          >
            <div
              class="col-md-2 text-md-end fw-bold"
            >
              <span
                class="ngb-tooltip-class"
                ngbtooltip="The intended recipients of this notification."
              >
                Target user group
              </span>
            </div>
            <div
              class="col-md-auto text-md-start"
            >
              <select
                class="form-control form-select ng-untouched ng-pristine ng-valid"
                id="notification-target-user"
              >
                <option
                  value="0: STUDENT"
                >
                  Students
                </option>
                <option
                  value="1: INSTRUCTOR"
                >
                  Instructors
                </option>
                <option
                  value="2: GENERAL"
                >
                  General (for both students and instructors)
                </option>
              </select>
            </div>
          </div>
          <br />
          <div
            class="row text-center"
          >
            <div
              class="col-md-2 text-md-end fw-bold"
            >
              <span
                class="ngb-tooltip-class"
                ngbtooltip="Different styles correspond to different background colours at display."
              >
                Notification style
              </span>
            </div>
            <div
              class="col-md-auto text-md-start"
            >
              <select
                class="form-control form-select ng-untouched ng-pristine ng-valid"
                id="notification-style"
              >
                <option
                  value="0: DANGER"
                >
                  Danger (red)
                </option>
                <option
                  value="1: DARK"
                >
                  Dark
                </option>
                <option
                  value="2: INFO"
                >
                  Info (cyan)
                </option>
                <option
                  value="3: LIGHT"
                >
                  Light
                </option>
                <option
                  value="4: PRIMARY"
                >
                  Primary (blue)
                </option>
                <option
                  value="5: SECONDARY"
                >
                  Secondary (grey)
                </option>
                <option
                  value="6: SUCCESS"
                >
                  Success (green)
                </option>
                <option
                  value="7: WARNING"
                >
                  Warning (yellow)
                </option>
              </select>
            </div>
            <div
              class="col-md-auto text-md-middle d-flex mb-0 border border-secondary alert alert-success"
            >
              <span
                class="align-self-center"
              >
                Style Demonstration
              </span>
            </div>
          </div>
          <br />
          <div
            class="row text-center"
          >
            <div
              class="col-md-2 text-md-end fw-bold"
            >
              <span
                class="ngb-tooltip-class"
                ngbtooltip="Enter the name of the notification e.g. Version Changelog 8.9.1."
              >
                Title
              </span>
            </div>
            <div
              class="col-md-10 text-md-start"
            >
              <input
                class="form-control ng-untouched ng-pristine ng-valid"
                id="notification-title"
                maxlength="80"
                placeholder="e.g. Version Changelog 8.9.1"
                type="text"
              />
              <div>
                 80 characters left 
              </div>
            </div>
          </div>
          <br />
          <div
            class="row text-center"
          >
            <div
              class="col-md-2 text-md-end fw-bold"
            >
              <span
                class="ngb-tooltip-class"
                ngbtooltip="Message body of the notification."
              >
                Message content
              </span>
            </div>
            <div
              class="col-md-10 text-md-start"
            >
              <tm-rich-text-editor
                id="notification-message"
              >
                <div
                  inviewport=""
                >
                </div>
              </tm-rich-text-editor>
            </div>
          </div>
          <br />
        </div>
      </div>
      <div
        class="card border-primary margin-top-20px"
      >
        <div
          class="card-body"
        >
          <div
            class="row text-center"
          >
            <div
              class="col-md-2 text-md-end fw-bold"
            >
              <span
                class="ngb-tooltip-class"
                ngbtooltip="This timezone is deduced based on your system/browser's settings."
              >
                Timezone
              </span>
            </div>
            <div
              class="col-md-4 text-md-start"
              id="submission-status"
            >
               UTC 
            </div>
          </div>
          <div
            class="row text-center margin-top-20px"
          >
            <div
              class="col-md-6"
            >
              <div
                class="col-12 text-md-start"
              >
                <div>
                  <label
                    class="ngb-tooltip-class label-control fw-bold"
                    ngbtooltip="Users will be able to see the notification."
                  >
                     Notification start time 
                  </label>
                </div>
              </div>
              <div
                class="row text-center align-items-center"
              >
                <div
                  class="col-md-7 col-xs-center"
                  id="notification-start-date"
                >
                  <tm-datepicker>
                    <div
                      class="input-group"
                    >
                      <input
                        aria-label="Date"
                        class="form-control ng-untouched ng-pristine ng-valid"
                        ngbdatepicker=""
                        readonly=""
                        type="text"
                      />
                      <button
                        aria-label="Change date"
                        class="btn btn-light input-group-text"
                        type="button"
                      >
                        <i
                          class="fas fa-calendar-alt"
                        />
                      </button>
                    </div>
                  </tm-datepicker>
                </div>
                <div
                  class="col-md-5"
                >
                  <tm-timepicker
                    id="notification-start-time"
                  >
                    <select
                      aria-label="Select time"
                      class="form-control form-select ng-untouched ng-pristine ng-valid"
                    >
                      <option
                        value="1: Object"
                      >
                         01:00H 
                      </option>
                      <option
                        value="2: Object"
                      >
                         02:00H 
                      </option>
                      <option
                        value="3: Object"
                      >
                         03:00H 
                      </option>
                      <option
                        value="4: Object"
                      >
                         04:00H 
                      </option>
                      <option
                        value="5: Object"
                      >
                         05:00H 
                      </option>
                      <option
                        value="6: Object"
                      >
                         06:00H 
                      </option>
                      <option
                        value="7: Object"
                      >
                         07:00H 
                      </option>
                      <option
                        value="8: Object"
                      >
                         08:00H 
                      </option>
                      <option
                        value="9: Object"
                      >
                         09:00H 
                      </option>
                      <option
                        value="10: Object"
                      >
                         10:00H 
                      </option>
                      <option
                        value="11: Object"
                      >
                         11:00H 
                      </option>
                      <option
                        value="12: Object"
                      >
                         12:00H 
                      </option>
                      <option
                        value="13: Object"
                      >
                         13:00H 
                      </option>
                      <option
                        value="14: Object"
                      >
                         14:00H 
                      </option>
                      <option
                        value="15: Object"
                      >
                         15:00H 
                      </option>
                      <option
                        value="16: Object"
                      >
                         16:00H 
                      </option>
                      <option
                        value="17: Object"
                      >
                         17:00H 
                      </option>
                      <option
                        value="18: Object"
                      >
                         18:00H 
                      </option>
                      <option
                        value="19: Object"
                      >
                         19:00H 
                      </option>
                      <option
                        value="20: Object"
                      >
                         20:00H 
                      </option>
                      <option
                        value="21: Object"
                      >
                         21:00H 
                      </option>
                      <option
                        value="22: Object"
                      >
                         22:00H 
                      </option>
                      <option
                        value="23: Object"
                      >
                         23:00H 
                      </option>
                      <option
                        value="0: Object"
                      >
                        23:59H
                      </option>
                      <option
                        value="24: Object"
                      >
                        00:00H
                      </option>
                    </select>
                  </tm-timepicker>
                </div>
              </div>
            </div>
            <div
              class="col-md-6 border-left-gray"
            >
              <div
                class="row text-center"
              >
                <div
                  class="col-12 text-md-start ms-md-2"
                >
                  <label
                    class="ngb-tooltip-class label-control fw-bold"
                    ngbtooltip="Notification will be hidden from users."
                  >
                     Notification end time 
                  </label>
                </div>
              </div>
              <div
                class="row align-items-center"
              >
                <div
                  class="col-md-7 col-xs-center"
                  id="notification-end-date"
                >
                  <tm-datepicker>
                    <div
                      class="input-group"
                    >
                      <input
                        aria-label="Date"
                        class="form-control ng-untouched ng-pristine ng-valid"
                        ngbdatepicker=""
                        readonly=""
                        type="text"
                      />
                      <button
                        aria-label="Change date"
                        class="btn btn-light input-group-text"
                        type="button"
                      >
                        <i
                          class="fas fa-calendar-alt"
                        />
                      </button>
                    </div>
                  </tm-datepicker>
                </div>
                <div
                  class="col-md-5"
                >
                  <tm-timepicker
                    id="notification-end-time"
                  >
                    <select
                      aria-label="Select time"
                      class="form-control form-select ng-untouched ng-pristine ng-valid"
                    >
                      <option
                        value="1: Object"
                      >
                         01:00H 
                      </option>
                      <option
                        value="2: Object"
                      >
                         02:00H 
                      </option>
                      <option
                        value="3: Object"
                      >
                         03:00H 
                      </option>
                      <option
                        value="4: Object"
                      >
                         04:00H 
                      </option>
                      <option
                        value="5: Object"
                      >
                         05:00H 
                      </option>
                      <option
                        value="6: Object"
                      >
                         06:00H 
                      </option>
                      <option
                        value="7: Object"
                      >
                         07:00H 
                      </option>
                      <option
                        value="8: Object"
                      >
                         08:00H 
                      </option>
                      <option
                        value="9: Object"
                      >
                         09:00H 
                      </option>
                      <option
                        value="10: Object"
                      >
                         10:00H 
                      </option>
                      <option
                        value="11: Object"
                      >
                         11:00H 
                      </option>
                      <option
                        value="12: Object"
                      >
                         12:00H 
                      </option>
                      <option
                        value="13: Object"
                      >
                         13:00H 
                      </option>
                      <option
                        value="14: Object"
                      >
                         14:00H 
                      </option>
                      <option
                        value="15: Object"
                      >
                         15:00H 
                      </option>
                      <option
                        value="16: Object"
                      >
                         16:00H 
                      </option>
                      <option
                        value="17: Object"
                      >
                         17:00H 
                      </option>
                      <option
                        value="18: Object"
                      >
                         18:00H 
                      </option>
                      <option
                        value="19: Object"
                      >
                         19:00H 
                      </option>
                      <option
                        value="20: Object"
                      >
                         20:00H 
                      </option>
                      <option
                        value="21: Object"
                      >
                         21:00H 
                      </option>
                      <option
                        value="22: Object"
                      >
                         22:00H 
                      </option>
                      <option
                        value="23: Object"
                      >
                         23:00H 
                      </option>
                      <option
                        value="0: Object"
                      >
                        23:59H
                      </option>
                      <option
                        value="24: Object"
                      >
                        00:00H
                      </option>
                    </select>
                  </tm-timepicker>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="row margin-top-20px"
      >
        <div
          class="col-12 text-center"
        >
          <span
            class="loader"
          />
          <div>
            <button
              class="btn btn-primary"
              id="btn-create-notification"
              type="button"
            >
              Create Notification 
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</tm-notification-edit-form>
`;

exports[`NotificationEditFormComponent should snap with notification 1`] = `
<tm-notification-edit-form
  NOTIFICATION_TITLE_MAX_LENGTH={[Function Number]}
  NotificationEditFormMode={[Function Object]}
  NotificationStyle={[Function Object]}
  NotificationTargetUser={[Function Object]}
  __ngContext__={[Function Number]}
  addNewNotificationEvent={[Function EventEmitter_]}
  cancelEditingNotificationEvent={[Function EventEmitter_]}
  courseCandidates={[Function Array]}
  editExistingNotificationEvent={[Function EventEmitter_]}
  formMode="0"
  guessTimezone={[Function String]}
  model={[Function Object]}
  modelChange={[Function EventEmitter_]}
  simpleModalService={[Function SimpleModalService]}
>
  <div
    class="card card-plain"
  >
    <div
      class="close-header"
    >
      <button
        aria-label="Close"
        class="btn-close float-end"
        type="button"
      />
    </div>
    <div
      class="card-body"
    >
      <div
        class="card border-primary"
      >
        <div
          class="card-body"
        >
          <div
            class="row text-center"
          >
            <div
              class="col-md-2 text-md-end fw-bold"
            >
              <span
                class="ngb-tooltip-class"
                ngbtooltip="The intended recipients of this notification."
              >
                Target user group
              </span>
            </div>
            <div
              class="col-md-auto text-md-start"
            >
              <select
                class="form-control form-select ng-untouched ng-pristine ng-valid"
                id="notification-target-user"
              >
                <option
                  value="0: STUDENT"
                >
                  Students
                </option>
                <option
                  value="1: INSTRUCTOR"
                >
                  Instructors
                </option>
                <option
                  value="2: GENERAL"
                >
                  General (for both students and instructors)
                </option>
              </select>
            </div>
          </div>
          <br />
          <div
            class="row text-center"
          >
            <div
              class="col-md-2 text-md-end fw-bold"
            >
              <span
                class="ngb-tooltip-class"
                ngbtooltip="Different styles correspond to different background colours at display."
              >
                Notification style
              </span>
            </div>
            <div
              class="col-md-auto text-md-start"
            >
              <select
                class="form-control form-select ng-untouched ng-pristine ng-valid"
                id="notification-style"
              >
                <option
                  value="0: DANGER"
                >
                  Danger (red)
                </option>
                <option
                  value="1: DARK"
                >
                  Dark
                </option>
                <option
                  value="2: INFO"
                >
                  Info (cyan)
                </option>
                <option
                  value="3: LIGHT"
                >
                  Light
                </option>
                <option
                  value="4: PRIMARY"
                >
                  Primary (blue)
                </option>
                <option
                  value="5: SECONDARY"
                >
                  Secondary (grey)
                </option>
                <option
                  value="6: SUCCESS"
                >
                  Success (green)
                </option>
                <option
                  value="7: WARNING"
                >
                  Warning (yellow)
                </option>
              </select>
            </div>
            <div
              class="col-md-auto text-md-middle d-flex mb-0 border border-secondary alert alert-success"
            >
              <span
                class="align-self-center"
              >
                Style Demonstration
              </span>
            </div>
          </div>
          <br />
          <div
            class="row text-center"
          >
            <div
              class="col-md-2 text-md-end fw-bold"
            >
              <span
                class="ngb-tooltip-class"
                ngbtooltip="Enter the name of the notification e.g. Version Changelog 8.9.1."
              >
                Title
              </span>
            </div>
            <div
              class="col-md-10 text-md-start"
            >
              <input
                class="form-control ng-untouched ng-pristine ng-valid"
                id="notification-title"
                maxlength="80"
                placeholder="e.g. Version Changelog 8.9.1"
                type="text"
              />
              <div>
                 69 characters left 
              </div>
            </div>
          </div>
          <br />
          <div
            class="row text-center"
          >
            <div
              class="col-md-2 text-md-end fw-bold"
            >
              <span
                class="ngb-tooltip-class"
                ngbtooltip="Message body of the notification."
              >
                Message content
              </span>
            </div>
            <div
              class="col-md-10 text-md-start"
            >
              <tm-rich-text-editor
                id="notification-message"
              >
                <div
                  inviewport=""
                >
                </div>
              </tm-rich-text-editor>
            </div>
          </div>
          <br />
        </div>
      </div>
      <div
        class="card border-primary margin-top-20px"
      >
        <div
          class="card-body"
        >
          <div
            class="row text-center"
          >
            <div
              class="col-md-2 text-md-end fw-bold"
            >
              <span
                class="ngb-tooltip-class"
                ngbtooltip="This timezone is deduced based on your system/browser's settings."
              >
                Timezone
              </span>
            </div>
            <div
              class="col-md-4 text-md-start"
              id="submission-status"
            >
               UTC 
            </div>
          </div>
          <div
            class="row text-center margin-top-20px"
          >
            <div
              class="col-md-6"
            >
              <div
                class="col-12 text-md-start"
              >
                <div>
                  <label
                    class="ngb-tooltip-class label-control fw-bold"
                    ngbtooltip="Users will be able to see the notification."
                  >
                     Notification start time 
                  </label>
                </div>
              </div>
              <div
                class="row text-center align-items-center"
              >
                <div
                  class="col-md-7 col-xs-center"
                  id="notification-start-date"
                >
                  <tm-datepicker>
                    <div
                      class="input-group"
                    >
                      <input
                        aria-label="Date"
                        class="form-control ng-untouched ng-pristine ng-invalid"
                        ngbdatepicker=""
                        readonly=""
                        type="text"
                      />
                      <button
                        aria-label="Change date"
                        class="btn btn-light input-group-text"
                        type="button"
                      >
                        <i
                          class="fas fa-calendar-alt"
                        />
                      </button>
                    </div>
                  </tm-datepicker>
                </div>
                <div
                  class="col-md-5"
                >
                  <tm-timepicker
                    id="notification-start-time"
                  >
                    <select
                      aria-label="Select time"
                      class="form-control form-select ng-untouched ng-pristine ng-valid"
                    >
                      <option
                        value="1: Object"
                      >
                         01:00H 
                      </option>
                      <option
                        value="2: Object"
                      >
                         02:00H 
                      </option>
                      <option
                        value="3: Object"
                      >
                         03:00H 
                      </option>
                      <option
                        value="4: Object"
                      >
                         04:00H 
                      </option>
                      <option
                        value="5: Object"
                      >
                         05:00H 
                      </option>
                      <option
                        value="6: Object"
                      >
                         06:00H 
                      </option>
                      <option
                        value="7: Object"
                      >
                         07:00H 
                      </option>
                      <option
                        value="8: Object"
                      >
                         08:00H 
                      </option>
                      <option
                        value="9: Object"
                      >
                         09:00H 
                      </option>
                      <option
                        value="10: Object"
                      >
                         10:00H 
                      </option>
                      <option
                        value="11: Object"
                      >
                         11:00H 
                      </option>
                      <option
                        value="12: Object"
                      >
                         12:00H 
                      </option>
                      <option
                        value="13: Object"
                      >
                         13:00H 
                      </option>
                      <option
                        value="14: Object"
                      >
                         14:00H 
                      </option>
                      <option
                        value="15: Object"
                      >
                         15:00H 
                      </option>
                      <option
                        value="16: Object"
                      >
                         16:00H 
                      </option>
                      <option
                        value="17: Object"
                      >
                         17:00H 
                      </option>
                      <option
                        value="18: Object"
                      >
                         18:00H 
                      </option>
                      <option
                        value="19: Object"
                      >
                         19:00H 
                      </option>
                      <option
                        value="20: Object"
                      >
                         20:00H 
                      </option>
                      <option
                        value="21: Object"
                      >
                         21:00H 
                      </option>
                      <option
                        value="22: Object"
                      >
                         22:00H 
                      </option>
                      <option
                        value="23: Object"
                      >
                         23:00H 
                      </option>
                      <option
                        value="0: Object"
                      >
                        23:59H
                      </option>
                      <option
                        value="24: Object"
                      >
                        00:00H
                      </option>
                    </select>
                  </tm-timepicker>
                </div>
              </div>
            </div>
            <div
              class="col-md-6 border-left-gray"
            >
              <div
                class="row text-center"
              >
                <div
                  class="col-12 text-md-start ms-md-2"
                >
                  <label
                    class="ngb-tooltip-class label-control fw-bold"
                    ngbtooltip="Notification will be hidden from users."
                  >
                     Notification end time 
                  </label>
                </div>
              </div>
              <div
                class="row align-items-center"
              >
                <div
                  class="col-md-7 col-xs-center"
                  id="notification-end-date"
                >
                  <tm-datepicker>
                    <div
                      class="input-group"
                    >
                      <input
                        aria-label="Date"
                        class="form-control ng-untouched ng-pristine ng-invalid"
                        ngbdatepicker=""
                        readonly=""
                        type="text"
                      />
                      <button
                        aria-label="Change date"
                        class="btn btn-light input-group-text"
                        type="button"
                      >
                        <i
                          class="fas fa-calendar-alt"
                        />
                      </button>
                    </div>
                  </tm-datepicker>
                </div>
                <div
                  class="col-md-5"
                >
                  <tm-timepicker
                    id="notification-end-time"
                  >
                    <select
                      aria-label="Select time"
                      class="form-control form-select ng-untouched ng-pristine ng-valid"
                    >
                      <option
                        value="1: Object"
                      >
                         01:00H 
                      </option>
                      <option
                        value="2: Object"
                      >
                         02:00H 
                      </option>
                      <option
                        value="3: Object"
                      >
                         03:00H 
                      </option>
                      <option
                        value="4: Object"
                      >
                         04:00H 
                      </option>
                      <option
                        value="5: Object"
                      >
                         05:00H 
                      </option>
                      <option
                        value="6: Object"
                      >
                         06:00H 
                      </option>
                      <option
                        value="7: Object"
                      >
                         07:00H 
                      </option>
                      <option
                        value="8: Object"
                      >
                         08:00H 
                      </option>
                      <option
                        value="9: Object"
                      >
                         09:00H 
                      </option>
                      <option
                        value="10: Object"
                      >
                         10:00H 
                      </option>
                      <option
                        value="11: Object"
                      >
                         11:00H 
                      </option>
                      <option
                        value="12: Object"
                      >
                         12:00H 
                      </option>
                      <option
                        value="13: Object"
                      >
                         13:00H 
                      </option>
                      <option
                        value="14: Object"
                      >
                         14:00H 
                      </option>
                      <option
                        value="15: Object"
                      >
                         15:00H 
                      </option>
                      <option
                        value="16: Object"
                      >
                         16:00H 
                      </option>
                      <option
                        value="17: Object"
                      >
                         17:00H 
                      </option>
                      <option
                        value="18: Object"
                      >
                         18:00H 
                      </option>
                      <option
                        value="19: Object"
                      >
                         19:00H 
                      </option>
                      <option
                        value="20: Object"
                      >
                         20:00H 
                      </option>
                      <option
                        value="21: Object"
                      >
                         21:00H 
                      </option>
                      <option
                        value="22: Object"
                      >
                         22:00H 
                      </option>
                      <option
                        value="23: Object"
                      >
                         23:00H 
                      </option>
                      <option
                        value="0: Object"
                      >
                        23:59H
                      </option>
                      <option
                        value="24: Object"
                      >
                        00:00H
                      </option>
                    </select>
                  </tm-timepicker>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="row margin-top-20px"
      >
        <div
          class="col-12 text-center"
        >
          <span
            class="loader"
          />
          <div>
            <button
              class="btn btn-primary"
              id="btn-create-notification"
              type="button"
            >
              Create Notification 
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</tm-notification-edit-form>
`;

exports[`NotificationEditFormComponent should snap with notification that has been shown to users 1`] = `
<tm-notification-edit-form
  NOTIFICATION_TITLE_MAX_LENGTH={[Function Number]}
  NotificationEditFormMode={[Function Object]}
  NotificationStyle={[Function Object]}
  NotificationTargetUser={[Function Object]}
  __ngContext__={[Function Number]}
  addNewNotificationEvent={[Function EventEmitter_]}
  cancelEditingNotificationEvent={[Function EventEmitter_]}
  courseCandidates={[Function Array]}
  editExistingNotificationEvent={[Function EventEmitter_]}
  formMode="0"
  guessTimezone={[Function String]}
  model={[Function Object]}
  modelChange={[Function EventEmitter_]}
  simpleModalService={[Function SimpleModalService]}
>
  <div
    class="card card-plain"
  >
    <div
      class="close-header"
    >
      <button
        aria-label="Close"
        class="btn-close float-end"
        type="button"
      />
    </div>
    <div
      class="card-body"
    >
      <div
        class="alert alert-danger mb-0"
      >
        <h5>
          <i
            class="fas fa-exclamation-circle"
          />
           This notification has already been shown to users.
        </h5>
        <p>
          Major edits to the notification are not recommended.
        </p>
      </div>
    </div>
    <div
      class="card-body"
    >
      <div
        class="card border-primary"
      >
        <div
          class="card-body"
        >
          <div
            class="row text-center"
          >
            <div
              class="col-md-2 text-md-end fw-bold"
            >
              <span
                class="ngb-tooltip-class"
                ngbtooltip="The intended recipients of this notification."
              >
                Target user group
              </span>
            </div>
            <div
              class="col-md-auto text-md-start"
            >
              <select
                class="form-control form-select ng-untouched ng-pristine ng-valid"
                id="notification-target-user"
              >
                <option
                  value="0: STUDENT"
                >
                  Students
                </option>
                <option
                  value="1: INSTRUCTOR"
                >
                  Instructors
                </option>
                <option
                  value="2: GENERAL"
                >
                  General (for both students and instructors)
                </option>
              </select>
            </div>
          </div>
          <br />
          <div
            class="row text-center"
          >
            <div
              class="col-md-2 text-md-end fw-bold"
            >
              <span
                class="ngb-tooltip-class"
                ngbtooltip="Different styles correspond to different background colours at display."
              >
                Notification style
              </span>
            </div>
            <div
              class="col-md-auto text-md-start"
            >
              <select
                class="form-control form-select ng-untouched ng-pristine ng-valid"
                id="notification-style"
              >
                <option
                  value="0: DANGER"
                >
                  Danger (red)
                </option>
                <option
                  value="1: DARK"
                >
                  Dark
                </option>
                <option
                  value="2: INFO"
                >
                  Info (cyan)
                </option>
                <option
                  value="3: LIGHT"
                >
                  Light
                </option>
                <option
                  value="4: PRIMARY"
                >
                  Primary (blue)
                </option>
                <option
                  value="5: SECONDARY"
                >
                  Secondary (grey)
                </option>
                <option
                  value="6: SUCCESS"
                >
                  Success (green)
                </option>
                <option
                  value="7: WARNING"
                >
                  Warning (yellow)
                </option>
              </select>
            </div>
            <div
              class="col-md-auto text-md-middle d-flex mb-0 border border-secondary alert alert-success"
            >
              <span
                class="align-self-center"
              >
                Style Demonstration
              </span>
            </div>
          </div>
          <br />
          <div
            class="row text-center"
          >
            <div
              class="col-md-2 text-md-end fw-bold"
            >
              <span
                class="ngb-tooltip-class"
                ngbtooltip="Enter the name of the notification e.g. Version Changelog 8.9.1."
              >
                Title
              </span>
            </div>
            <div
              class="col-md-10 text-md-start"
            >
              <input
                class="form-control ng-untouched ng-pristine ng-valid"
                id="notification-title"
                maxlength="80"
                placeholder="e.g. Version Changelog 8.9.1"
                type="text"
              />
              <div>
                 69 characters left 
              </div>
            </div>
          </div>
          <br />
          <div
            class="row text-center"
          >
            <div
              class="col-md-2 text-md-end fw-bold"
            >
              <span
                class="ngb-tooltip-class"
                ngbtooltip="Message body of the notification."
              >
                Message content
              </span>
            </div>
            <div
              class="col-md-10 text-md-start"
            >
              <tm-rich-text-editor
                id="notification-message"
              >
                <div
                  inviewport=""
                >
                </div>
              </tm-rich-text-editor>
            </div>
          </div>
          <br />
        </div>
      </div>
      <div
        class="card border-primary margin-top-20px"
      >
        <div
          class="card-body"
        >
          <div
            class="row text-center"
          >
            <div
              class="col-md-2 text-md-end fw-bold"
            >
              <span
                class="ngb-tooltip-class"
                ngbtooltip="This timezone is deduced based on your system/browser's settings."
              >
                Timezone
              </span>
            </div>
            <div
              class="col-md-4 text-md-start"
              id="submission-status"
            >
               UTC 
            </div>
          </div>
          <div
            class="row text-center margin-top-20px"
          >
            <div
              class="col-md-6"
            >
              <div
                class="col-12 text-md-start"
              >
                <div>
                  <label
                    class="ngb-tooltip-class label-control fw-bold"
                    ngbtooltip="Users will be able to see the notification."
                  >
                     Notification start time 
                  </label>
                </div>
              </div>
              <div
                class="row text-center align-items-center"
              >
                <div
                  class="col-md-7 col-xs-center"
                  id="notification-start-date"
                >
                  <tm-datepicker>
                    <div
                      class="input-group"
                    >
                      <input
                        aria-label="Date"
                        class="form-control ng-untouched ng-pristine ng-invalid"
                        ngbdatepicker=""
                        readonly=""
                        type="text"
                      />
                      <button
                        aria-label="Change date"
                        class="btn btn-light input-group-text"
                        type="button"
                      >
                        <i
                          class="fas fa-calendar-alt"
                        />
                      </button>
                    </div>
                  </tm-datepicker>
                </div>
                <div
                  class="col-md-5"
                >
                  <tm-timepicker
                    id="notification-start-time"
                  >
                    <select
                      aria-label="Select time"
                      class="form-control form-select ng-untouched ng-pristine ng-valid"
                    >
                      <option
                        value="1: Object"
                      >
                         01:00H 
                      </option>
                      <option
                        value="2: Object"
                      >
                         02:00H 
                      </option>
                      <option
                        value="3: Object"
                      >
                         03:00H 
                      </option>
                      <option
                        value="4: Object"
                      >
                         04:00H 
                      </option>
                      <option
                        value="5: Object"
                      >
                         05:00H 
                      </option>
                      <option
                        value="6: Object"
                      >
                         06:00H 
                      </option>
                      <option
                        value="7: Object"
                      >
                         07:00H 
                      </option>
                      <option
                        value="8: Object"
                      >
                         08:00H 
                      </option>
                      <option
                        value="9: Object"
                      >
                         09:00H 
                      </option>
                      <option
                        value="10: Object"
                      >
                         10:00H 
                      </option>
                      <option
                        value="11: Object"
                      >
                         11:00H 
                      </option>
                      <option
                        value="12: Object"
                      >
                         12:00H 
                      </option>
                      <option
                        value="13: Object"
                      >
                         13:00H 
                      </option>
                      <option
                        value="14: Object"
                      >
                         14:00H 
                      </option>
                      <option
                        value="15: Object"
                      >
                         15:00H 
                      </option>
                      <option
                        value="16: Object"
                      >
                         16:00H 
                      </option>
                      <option
                        value="17: Object"
                      >
                         17:00H 
                      </option>
                      <option
                        value="18: Object"
                      >
                         18:00H 
                      </option>
                      <option
                        value="19: Object"
                      >
                         19:00H 
                      </option>
                      <option
                        value="20: Object"
                      >
                         20:00H 
                      </option>
                      <option
                        value="21: Object"
                      >
                         21:00H 
                      </option>
                      <option
                        value="22: Object"
                      >
                         22:00H 
                      </option>
                      <option
                        value="23: Object"
                      >
                         23:00H 
                      </option>
                      <option
                        value="0: Object"
                      >
                        23:59H
                      </option>
                      <option
                        value="24: Object"
                      >
                        00:00H
                      </option>
                    </select>
                  </tm-timepicker>
                </div>
              </div>
            </div>
            <div
              class="col-md-6 border-left-gray"
            >
              <div
                class="row text-center"
              >
                <div
                  class="col-12 text-md-start ms-md-2"
                >
                  <label
                    class="ngb-tooltip-class label-control fw-bold"
                    ngbtooltip="Notification will be hidden from users."
                  >
                     Notification end time 
                  </label>
                </div>
              </div>
              <div
                class="row align-items-center"
              >
                <div
                  class="col-md-7 col-xs-center"
                  id="notification-end-date"
                >
                  <tm-datepicker>
                    <div
                      class="input-group"
                    >
                      <input
                        aria-label="Date"
                        class="form-control ng-untouched ng-pristine ng-invalid"
                        ngbdatepicker=""
                        readonly=""
                        type="text"
                      />
                      <button
                        aria-label="Change date"
                        class="btn btn-light input-group-text"
                        type="button"
                      >
                        <i
                          class="fas fa-calendar-alt"
                        />
                      </button>
                    </div>
                  </tm-datepicker>
                </div>
                <div
                  class="col-md-5"
                >
                  <tm-timepicker
                    id="notification-end-time"
                  >
                    <select
                      aria-label="Select time"
                      class="form-control form-select ng-untouched ng-pristine ng-valid"
                    >
                      <option
                        value="1: Object"
                      >
                         01:00H 
                      </option>
                      <option
                        value="2: Object"
                      >
                         02:00H 
                      </option>
                      <option
                        value="3: Object"
                      >
                         03:00H 
                      </option>
                      <option
                        value="4: Object"
                      >
                         04:00H 
                      </option>
                      <option
                        value="5: Object"
                      >
                         05:00H 
                      </option>
                      <option
                        value="6: Object"
                      >
                         06:00H 
                      </option>
                      <option
                        value="7: Object"
                      >
                         07:00H 
                      </option>
                      <option
                        value="8: Object"
                      >
                         08:00H 
                      </option>
                      <option
                        value="9: Object"
                      >
                         09:00H 
                      </option>
                      <option
                        value="10: Object"
                      >
                         10:00H 
                      </option>
                      <option
                        value="11: Object"
                      >
                         11:00H 
                      </option>
                      <option
                        value="12: Object"
                      >
                         12:00H 
                      </option>
                      <option
                        value="13: Object"
                      >
                         13:00H 
                      </option>
                      <option
                        value="14: Object"
                      >
                         14:00H 
                      </option>
                      <option
                        value="15: Object"
                      >
                         15:00H 
                      </option>
                      <option
                        value="16: Object"
                      >
                         16:00H 
                      </option>
                      <option
                        value="17: Object"
                      >
                         17:00H 
                      </option>
                      <option
                        value="18: Object"
                      >
                         18:00H 
                      </option>
                      <option
                        value="19: Object"
                      >
                         19:00H 
                      </option>
                      <option
                        value="20: Object"
                      >
                         20:00H 
                      </option>
                      <option
                        value="21: Object"
                      >
                         21:00H 
                      </option>
                      <option
                        value="22: Object"
                      >
                         22:00H 
                      </option>
                      <option
                        value="23: Object"
                      >
                         23:00H 
                      </option>
                      <option
                        value="0: Object"
                      >
                        23:59H
                      </option>
                      <option
                        value="24: Object"
                      >
                        00:00H
                      </option>
                    </select>
                  </tm-timepicker>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="row margin-top-20px"
      >
        <div
          class="col-12 text-center"
        >
          <span
            class="loader"
          />
          <div>
            <button
              class="btn btn-primary"
              id="btn-create-notification"
              type="button"
            >
              Create Notification 
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</tm-notification-edit-form>
`;
